# mcp-core

./: Anchor.toml  README.md  package.json
programs/execution/: Cargo.toml
programs/execution/src/: lib.rs
programs/registry/: Cargo.toml
programs/registry/src/: lib.rs
