[package]
name = "execution"
version = "0.1.0"
description = "Execution tracking and metering for Machine-Centric Protocol (MCP) on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "execution"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
solana-program = "1.14.10"
registry = { path = "../registry", features = ["cpi"] }
